tests/NormalTests/paczka1/small_fuzzy/22380472.err
Error in line 7: XsuKszZ A618 83,4
Error in line 5: NJ3oC A618 57,2
Error in line 12: NJ3oC S647 60,5
